# persona2hire

./: .gitignore  CV.py  CV.txt  CV_ex.txt  README.md  pyproject.toml  requirements.txt  run.py
docs/: ML_PIPELINE.md
persona2hire/: __init__.py  main.py
persona2hire/analysis/: __init__.py  job_analyzer.py  personality_analyzer.py
persona2hire/cv/: __init__.py  parser.py  writer.py
persona2hire/data/: __init__.py  constants.py  job_sectors.py  personality.py
persona2hire/gui/: __init__.py  cv_form.py  dialogs.py  main_window.py  results.py
persona2hire/ml/: __init__.py  data_generator.py  feature_extractor.py  feedback.py  model.py  pipeline.py
samples/: cv_example.txt  cv_example_2.txt
scripts/: __init__.py  generate_samples.py  train_model.py
templates/: cv_template.txt
tests/: __init__.py  conftest.py  test_job_analyzer.py  test_ml.py  test_parser.py  test_personality_analyzer.py  test_writer.py
